<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_extracting_encounters">Extracting encounters…</string>
    <string name="title_rpis_extracted" tools:ignore="PluralsCandidate">%1$d encounters scanned (%2$s-%3$s).</string>
    <string name="title_no_rpis_extracted">No encounters found.</string>
    <plurals name="title_diagnosis_keys_downloading">
        <item quantity="one">Downloading diagnosis keys… (%1$d day) (%2$s)</item>
        <item quantity="other">Downloading diagnosis keys… (%1$d days) (%2$s)</item>
    </plurals>
    <plurals name="title_diagnosis_keys_downloaded">
        <item quantity="one">%1$d diagnosis keys downloaded (%2$d day) (%3$s)."</item>
        <item quantity="other">%1$d diagnosis keys downloaded (%2$d days) (%3$s)."</item>
    </plurals>
    <plurals name="title_diagnosis_keys_downloaded_warning">
        <item quantity="one">(⚠️Warning: %1$d error during download!️)</item>
        <item quantity="other">(⚠️Warning: ️%1$d errors during download!)</item>
    </plurals>
    <string name="title_diagnosis_keys_download_failed">Download failed.</string>
    <string name="title_matching_not_done_yet">Matching in progress…</string>
    <string name="title_matching_not_done_yet_with_progress" tools:ignore="PluralsCandidate">Matching in progress… %1$d%% (%2$d found)</string>
    <string name="title_matching_not_possible">Matching not possible. (Need both scanned encounters and diagnosis keys for this.)</string>
    <string name="title_matching_error">Matching error. (An unexpected error happened during matching: %1$s)</string>
    <string name="title_no_matches_found">No risk encounters found.</string>
    <plurals name="title_number_of_matches_found">
        <item quantity="one">%1$d risk encounter. Tap to see details…</item>
        <item quantity="other">%1$d risk encounters. Tap to see details…</item>
    </plurals>
    <plurals name="details_title_matches_on_day">
        <item quantity="one">Risk encounter on %1$s:</item>
        <item quantity="other">Risk encounters on %1$s:</item>
    </plurals>
    <string name="time">🕐</string>
    <string name="transmission_risk_level">Transmission Risk</string>
    <string name="days_since_onset_of_symptoms">Days since the onset of symptoms</string>
    <string name="please_wait">Please wait…</string>
    <string name="matching_soon">Matching will start soon…</string>
    <string name="report_type" tools:ignore="UnusedResources">Report type</string>
    <string name="report_type_revoked">revoked</string>
    <string name="report_type_unknown">unknown</string>
    <string name="report_type_recursive">recursive</string>
    <string name="report_type_self_report">self report</string>
    <string name="report_type_confirmed_test">confirmed test</string>
    <string name="report_type_clinical_diagnosis">clinical diagnosis</string>
    <string name="invalid">invalid</string>
    <string name="distance_shown_as_attenuation">Distance (attenuation in dB)</string>
    <string name="menu_entry_show_hide_all_scans">Show/Hide All Scans</string>
    <string name="menu_entry_show_hide_location">Show/Hide Location</string>
    <string name="menu_entry_switch_to_normal_mode">Normal Mode (root)</string>
    <string name="menu_entry_switch_to_ramble_mode">RaMBLE Mode</string>
    <string name="menu_entry_switch_to_microg_mode">microG Mode (root)</string>
    <string name="menu_entry_switch_to_cctg_mode">CCTG Mode (root)</string>
    <string name="menu_entry_switch_to_demo_mode">Demo Mode</string>
    <string name="menu_entry_oss_licenses">Open Source Software Licenses</string>
    <string name="menu_entry_view_further_oss_licenses">Further Open Source Software Licenses</string>
    <string name="menu_entry_about">About this app</string>
    <string name="title_activity_licenses">OSS Licenses</string>
    <!--suppress AndroidDomInspection -->
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_main_demo_prefix">"DEMO "</string>
    <string name="title_activity_main_ramble_version">"RaMBLE-Warn-Companion"</string>
    <string name="title_activity_main_microg_version">"microG-Warn-Companion"</string>
    <string name="title_activity_main_cctg_version">"CCTG-Warn-Companion"</string>
    <!--suppress AndroidDomInspection -->
    <string name="title_activity_details">@string/app_name</string>
    <string name="title_activity_details_demo">DEMO sample details</string>
    <string name="title_activity_details_ramble">RaMBLE-based details</string>
    <string name="title_activity_details_microg">microG-based details</string>
    <string name="title_activity_details_cctg">CCTG-based details</string>
    <string name="title_activity_further_licenses">Further OSS Licenses</string>
    <string name="error_app_mode_switching_not_possible">Sorry, at the moment we cannot switch modes.\nPlease wait until all operations have finished.</string>
    <string name="error_no_rpis_normal_mode">ERROR!\nEncounters could not be extracted.\nAre Exposure Notifications enabled?\nDid you grant ROOT rights to this app?</string>
    <string name="error_empty_rpis_normal_mode">ERROR!\nNo encounters found.\nDid you scan some encounters? The database is apparently empty.</string>
    <string name="error_no_rpis_ramble_mode">ERROR!\nEncounters could not be extracted.\nDid you allow file access?\nDid you export a RaMBLE database? If yes, the database is probably broken.</string>
    <string name="error_empty_rpis_ramble_mode">ERROR!\nNo encounters found.\nDid you scan some encounters and then export a fresh RaMBLE database? The exported database is apparently empty.</string>
    <string name="error_download">ERROR!\nDownload of Diagnosis Keys failed.\nIs your internet connection working?</string>
    <string name="title_activity_about">About this app</string>
    <string name="about_version">Version\n%1$s (%2$d, %3$s)</string>
    <string name="error_download_invalid_key_file_header">ERROR!\nDownloaded Diagnosis Keys file starts with incorrect header!</string>
    <string name="saved_app_mode" translatable="false">APP_MODE</string>
    <string name="tx_power">TX Power reported by sender: %1$s dB</string>
    <string name="menu_entry_countries_sub_menu">Countries</string>
    <string name="country_canada">🇨🇦 Canada</string>
    <string name="flag_canada" translatable="false">🇨🇦</string>
    <string name="country_code_canada" translatable="false">CA</string>
    <string name="country_czechia">🇨🇿 Czechia</string>
    <string name="flag_czechia" translatable="false">🇨🇿</string>
    <string name="country_code_czechia" translatable="false">CZ</string>
    <string name="country_germany">🇩🇪 Germany</string>
    <string name="flag_germany" translatable="false">🇩🇪</string>
    <string name="country_code_germany" translatable="false">DE</string>
    <string name="country_poland">🇵🇱 Poland</string>
    <string name="flag_poland" translatable="false">🇵🇱</string>
    <string name="country_code_poland" translatable="false">PL</string>
    <string name="country_switzerland">🇨🇭 Switzerland</string>
    <string name="flag_switzerland" translatable="false">🇨🇭</string>
    <string name="country_code_switzerland" translatable="false">CH</string>
    <string name="country_eaw">🏴󠁧󠁢󠁥󠁮󠁧󠁿🏴󠁧󠁢󠁷󠁬󠁳󠁿 England and Wales</string>
    <string name="flag_eaw" translatable="false">🏴󠁧󠁢󠁥󠁮󠁧󠁿🏴󠁧󠁢󠁷󠁬󠁳󠁿</string>
    <string name="country_code_eaw" translatable="false">EAW</string>
    <string name="country_austria">🇦🇹 Austria</string>
    <string name="flag_austria" translatable="false">🇦🇹</string>
    <string name="country_code_austria" translatable="false">AT</string>
    <string name="country_belgium">🇧🇪 Belgium</string>
    <string name="flag_belgium" translatable="false">🇧🇪</string>
    <string name="country_code_belgium" translatable="false">BE</string>
    <string name="austrian_color_code_yellow">yellow</string>
    <string name="austrian_color_code_red">red</string>
    <string name="country_netherlands">🇳🇱 Netherlands</string>
    <string name="flag_netherlands" translatable="false">🇳🇱</string>
    <string name="country_code_netherlands" translatable="false">NL</string>
    <string name="country_ireland">🇮🇪 Ireland</string>
    <string name="flag_ireland" translatable="false">🇮🇪</string>
    <string name="country_code_ireland" translatable="false">IE</string>
    <string name="country_italy">🇮🇹 Italy</string>
    <string name="flag_italy" translatable="false">🇮🇹</string>
    <string name="country_code_italy" translatable="false">IT</string>
    <string name="country_denmark">🇩🇰 Denmark</string>
    <string name="flag_denmark" translatable="false">🇩🇰</string>
    <string name="country_code_denmark" translatable="false">DK</string>
    <string name="country_latvia">🇱🇻 Latvia</string>
    <string name="flag_latvia" translatable="false">🇱🇻</string>
    <string name="country_code_latvia" translatable="false">LV</string>
    <string name="country_spain">🇪🇸 Spain</string>
    <string name="flag_spain" translatable="false">🇪🇸</string>
    <string name="country_code_spain" translatable="false">ES</string>
    <string name="countries_one_europe">🇩🇪 Germany, 🇧🇪 Belgium, 🇩🇰 Denmark, 🇪🇪 Estonia, 🇫🇮 Finland, 🇮🇪 Ireland, 🇮🇹 Italy, 🇭🇷 Croatia, 🇱🇻 Latvia, 🇱🇹 Lithuania, 🇲🇹 Malta, 🇳🇱 Netherlands, 🇳🇴 Norway, 🇦🇹 Austria, 🇵🇱 Poland, 🇸🇮 Slovenia, 🇨🇭 Switzerland, 🇪🇸 Spain, 🇨🇾 Cyprus</string>
    <string name="flags_one_europe" translatable="false">🇩🇪🇧🇪🇩🇰🇪🇪🇫🇮🇮🇪🇮🇹🇭🇷🇱🇻🇱🇹🇲🇹🇳🇱🇳🇴🇦🇹🇵🇱🇸🇮🇨🇭🇪🇸🇨🇾</string>
    <string name="toast_download_error">Error during download: %1$s</string>
    <string name="point_of_exposure">Point of exposure</string>
    <string name="toast_switching_to_microg_mode">Switching App to microG Mode!</string>
    <string name="title_activity_set_num_download_days">Number of Download Days</string>
    <string name="explanation_for_num_download_days_1">This app downloads Diagnosis Keys (DKs) for matching with your recorded RPIs. The official Warn Apps download DKs that have been provided by the servers over the last %2$d days. But because the number of Diagnosis Keys went up, matching can now take a very long time. Therefore, you now have the option to download DKs for fewer days only (currently works e.g. for "Germany+Europe"). This makes sense if you use this app regularly, e.g. every 3 days. Then you can only download new DKs that were made available during the last 3 days. This app will not store previous matching results, so you will not see results from older DKs. Note that the results will still be spread over up to %2$d days, because infected users upload DKs for up to %2$d days.</string>
    <string name="explanation_for_num_download_days_2">Please select the number of days (from %1$d to %2$d; choose %2$d to download all available DKs as before) and then tap ✔:</string>
    <string name="menu_entry_set_num_download_days">Number of Download Days</string>
    <string name="saved_num_download_days" translatable="false">NUM_DOWNLOAD_DAYS</string>
</resources>