<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/about"
        android:title="@string/menu_entry_about" />
    <group android:id="@+id/mode_group"
        android:checkableBehavior="single">
        <item android:id="@+id/normal_mode"
            android:title="@string/menu_entry_switch_to_normal_mode" />
        <item android:id="@+id/ramble_mode"
            android:title="@string/menu_entry_switch_to_ramble_mode" />
        <item android:id="@+id/microg_mode"
            android:title="@string/menu_entry_switch_to_microg_mode" />
        <item android:id="@+id/demo_mode"
            android:title="@string/menu_entry_switch_to_demo_mode" />
    </group>
    <item android:title="@string/menu_entry_countries_sub_menu"
        android:id="@+id/country_sub_menu">
        <menu >
            <group android:id="@+id/country_group"
                android:checkableBehavior="all">
                <item android:id="@+id/austria"
                    android:title="@string/country_austria" />
                <item android:id="@+id/belgium"
                    android:title="@string/country_belgium" />
                <item android:id="@+id/canada"
                    android:title="@string/country_canada" />
                <item android:id="@+id/czechia"
                    android:title="@string/country_czechia" />
                <item android:id="@+id/germany"
                    android:title="@string/countries_one_europe" />
                <item android:id="@+id/netherlands"
                    android:title="@string/country_netherlands" />
                <item android:id="@+id/poland"
                    android:title="@string/country_poland" />
                <item android:id="@+id/switzerland"
                    android:title="@string/country_switzerland" />
                <item android:id="@+id/eaw"
                    android:title="@string/country_eaw" />
            </group>
        </menu>
    </item>
    <item android:id="@+id/download_optimization"
        android:checkable="true"
        android:title="@string/menu_entry_download_optimization" />
    <item android:id="@+id/osslicenses"
        android:title="@string/menu_entry_oss_licenses" />
</menu>